gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test20245.d
version https://git-lfs.github.com/spec/v1
oid sha256:bb430e74966d8a6841f06a02551916508335c83c843b593a74112685f44ba122
size 2512
